# ai-clinic-receptionist-voice-agent

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: app.py  dependencies.py
app/database/: db.py
app/database/schema/: appointment_schema.py
app/models/: clinic.py
app/routing/v1/endpoints/: appointments.py
app/services/: appointment_service.py
backend/: .env.example  pyproject.toml
backend/app/config/: app_config.py
backend/app/database/schema/: doctor_schema.py  patient_schema.py
backend/app/services/: appointment_service.py
backend/migrations/versions/: 4afa469aa4b8_denormalize_appointments.py  e7605e1e8ff6_init_core_schemas.py
frontend/: package-lock.json  package.json
frontend/src/api/: appointments.ts  client.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/types/: clinic.ts
migrations/: env.py
