[project]
name = "ai-clinic-receptionist-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]
